--- a/styles/variables.css
+++ b/styles/variables.css
@@ -51,7 +51,7 @@
 
     --gap-body: 60px;
     --gap-main: 80px;
-    --gap-section-images: 10px;
+    --gap-section-images: 20px;
 
     --padding-body: 20px;
 
